app/src/main/java/com/example/bookclub/errors/StudyAlreadyInOpenException.java
package com.example.bookclub.errors;

public class StudyAlreadyInOpenException extends RuntimeException {
	public StudyAlreadyInOpenException() {
		super("Study already started");
	}
}
